[package]
name = "hist3"
version = "0.1.0"
authors = ["sunny <gurjeet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
itertools = "0.12.1"
clap = { version = "4.5.20", features = ["derive"] }
regex = "1.11.1"
egui = "0.29.1"
eframe = "0.29.1"
egui_plot = "0.29.0"
once_cell = "1.20.2"
